--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta author="Fredrik Söderberg" />
     <link rel="stylesheet" href="style.css" />
-    <title>Home</title>
+    <title>Hem</title>
 </head>
 
 <body>
